<resources>
    <string name="app_name">INDIA</string>
    <string name="article_title"><b><font size="30">ABOUT INDIA\n</font></b></string>
    <string name="article_description"><font size="17">\nIndia, also known as the Republic of India,
        is a country in South Asia. It is the seventh-largest country by area, the second-most populous country
        (with over 1,200 crore (1.2 billion) people), and the most populous democracy in the world.
        Bounded by the Indian Ocean on the south, the Arabian Sea on the southwest, and the Bay of Bengal on the
        southeast, it shares land borders with Pakistan to the west; China, Nepal, and Bhutan to the northeast;
        and Bangladesh and Myanmar to the east. In the Indian Ocean, India is in the vicinity of Sri Lanka and the Maldives,
        while its Andaman and Nicobar Islands share a maritime border with Thailand and Indonesia.</font></string>
    <string name="describe_states"><b>\nIndia is a federal union comprising 28 states and 9 union territories, for a total of 37
        entities. The states and union territories are further subdivided into districts and smaller administrative divisions.\n</b></string>
    <string name="describe_union"><b>A union territory is a type of administrative division in the Republic of India.
        Unlike the states of India, which have their own governments, union territories are federal territories ruled
        directly by the union government (central government), hence the name "union territory".\n</b></string>
    <string name="under"><u>Nine Union Territories</u></string>
    <string name="describe_union1">Chandigarh is one of the best city in India, it is also known as The Green city of India.
        Chandigarh, is the capital of state Haryana and Punjab. It is considered as the first well planned city of India.
        Rock Garden and sukhna lake are good places to visit, a bird sanctuary is also located in the city which is home for a
        variety of bird species.\n</string>
    <string name="describe_union2">Dadra and Nagar Haveli located between Maharashtra and Gujarat and few kilometers from
        the city of Daman. A beautiful lake Garden Vanganga is located at the entrance of the city. Because of its scenic
        natural beauty and pleasant climate, Dadra and Nagar Haveli are dream tourist destinations.
        Silvassa the capital is one of the best place to visit.\n</string>
    <string name="describe_union3">Daman and Diu is located on western coast of India, Daman city is the capital having an area of
        72km. Daman and Diu is the second smallest among the other union territories in India. It has a mix culture of Indian
        and Portuguese. Daman and Diu is known for its untouched and explorer natural beauty. A trip to the famous beaches,
        Portuguese churches and forts of Daman and Diu can not be forgettable.\n</string>
    <string name="describe_jk">Jammu and Kashmir is a region administered by India as a union territory, and constituting the
        southern portion of the larger Kashmir region, which has been the subject of a dispute between India and Pakistan since 1947,
        and between India and China since 1962. The region of Jammu and Kashmir is separated by the Line of Control from the
        Pakistani-administered territories of Azad Kashmir and Gilgit-Baltistan in the west and north respectively. It lies to
        the north of the Indian states of Himachal Pradesh and Punjab and to the west of Ladakh, which is also subject to the
        dispute as a part of Kashmir, and administered by India as a union territory.\n</string>
    <string name="describe_ladakh">Ladakh is a region administered by India as a union territory, and constituting a part of the larger
        region of Kashmir, which has been the subject of dispute between India, Pakistan, and China since 1947.
        It is bordered by Tibet to the east, the Indian state of Himachal Pradesh to the south, Jammu and Kashmir and Baltistan to the
        west, and the southwest corner of Xinjiang across the Karakoram Pass in the far north.
        It extends from the Siachen Glacier in the Karakoram range to the north to the main Great Himalayas to the south.
        The eastern end of Ladakh, consisting of the uninhabited Aksai Chin plains, has been under Chinese control since 1962.\n</string>
    <string name="describe_union4">Lakshadweep is the smallest union territories in terms of area as well as in population.
        Lakshadweep located off of the coast of Kerala in the Laccadive Sea. The total area is 32 km and Kavaratti is the
        capital with a largest city is Andrott. Lakshadweep is fast becoming India’s one of the best tourism location for its
        kinds “Adventure sports”. Some of the Island’s are still inhabited and full of natural beauty.\n</string>
    <string name="describe_union5">Pondicherry is located on the eastern ghat of India. It was a former French colony.
        Puducherry is one of the most popular tourist destinations in South India. Beaches and Churches in Puducherry are
        most popular tourist attraction. It is also one of the educational hubs in southern India.\n</string>
    <string name="describe_union6">Andaman and Nicobar are the group of island located in the Indian Ocean.
        The Andamans and Nicobars are separated by a channel. These Islands are blessed with a unique tropical evergreen forest.
        The British used this islands as an isolated prison know as “Kala pani” for Indian freedom fighters. Local people of Islands
        still maintained their separated existence, these Indian Tribes are known as Jarwa and Great Andamanese.
        Port Blair is the largest city and the capital of Island.\n</string>
    <string name="describe_union7">The official name National Capital Territory of Delhi, in 1956 Delhi was converted into
        a Union territory. Delhi is a largest metro green city by area in India and eighth in the world by population.
        Delhi also own NationalCapital Region urban area in which Noida, Gurgaon, Greater Noida, Faridabad and Ghaziabad
        are included.\n</string>
    <string name="describe_river"><b>The rivers of India play an important role in the lives of the Indians.
        They provide potable water, cheap transportation, electricity, and the livelihood for a large number of people all
        over the country. This easily explains why nearly all the major cities of India are located by the banks of rivers.\n</b></string>
    <string name="describe_port"><b>India has a coastline spanning 7516.6 kilometres, forming one of the biggest peninsulas in the world.
        According to the Ministry of Shipping, around 95 per cent of India s trading by volume and 70 per cent by value is done
        through maritime transport. It is serviced by 12 major ports, 200 notified minor and intermediate ports. The total 200
        non-major ports are in the following States:- Maharashtra (48); Gujarat (42); Tamil Nadu (15); Karnataka (10); Kerala (17);
        Andhra Pradesh (12); Odisha (13); Goa (5); West Bengal (1); Daman and Diu (2); Lakshadweep (10); Pondicherry (2); and
        Andaman and Nicobar (23).\n</b></string>
    <string name="seaports"><u>Twelve Major Sea Ports</u></string>
    <string name="describe_kandla">Gujarat host the major seaport of west coast, The Kandla Port is situated on
        the Gulf of Kutch near the Gandhidham city in Kutch District of Gujarat. The Port of Kandla is the first special
        economic zone in India as well as in Asia. Kandla Port is hub for major imports like petroleum, chemicals and iron also
        export grains, salt and textiles. Port of Kandla is one of the highest earning ports of India, another port in Gujarat
        is Mundra Port,India’s largest private port.\n</string>
    <string name="describe_nhava_sheva">Nhava Sheva now known as Jawaharlal Nehru Port is the largest container port in India,
        situated at the mainland of Konkan area across the Navi Mumbai Maharashtra. Jawaharlal Nehru Port is the king port of
        Arabian Sea at west cost and handle a large volume of international container traffic and domestic cargo traffic.
        The major exports are textiles, carpets, boneless meat and main imports are machinery,vegetable oils and chemicals.\n</string>
    <string name="describe_mumbai">The Mumbai Port is located in the mainland of west Mumbai on the West coast of India with
        natural deep-water harbor. Mumbai Port is the largest port in India and handles bulk cargo traffic with its four jetties
        for handling Liquid chemicals, Crude and petroleum products. International container traffic of Mumbai Port is directed
        to the new and big Nhava Sheva port.\n</string>
    <string name="describe_marmagao">"The main port of Goa, Marmagao port is a best natural harbors of India located in South Goa. Marmagao port is one of the leading iron ores exporter port in India and raw materials too.The port of Marmagao is one of the major attraction of Goa along with the beautiful city of Vasco da Gama and international airport Dabolim. The natural harbor of Goa is one of India’s earliest modern ports.\n</string>
    <string name="describe_panambur">Panambur Port known as the New Mangalore Port, is a seaport located near to Surathkal
        railway station in Dakshina Kannada district of Karnataka. New Mangalore Port is a deep water all weather port and the
        only major port of Karnataka and one of the largest port in India. Port of Mangalore export major commodities like
        manganese, granite stones, coffee and cashew and main imports includes timber logs, LPG, petroleum products and cargo
        containers. There is a beautiful beach at south of sea port of Panambur along with the shore of the Arabian Sea.\n</string>
    <string name="awards">Prize and Awards in India</string>
    <string name="field1">\n<u>Civilian Awards in India</u></string>
    <string name="Bharat_ratna">It is the highest civilian award of India.\nField: It is given for exceptional performance in any field or
        service.</string>
    <string name="vibhushan">It is the second highest civilian award of India after Bharat Ratna.\nField: Given for the exceptional
    performance in the field of service, including public service, doctors and scientists.</string>
    <string name="bhushan">It is the third highest civilian award of India after Padma Vibhushan.\nField: Given for distinguish service
    of a high order</string>
    <string name="shri">It is the fourth highest civilian award of India after Padma Bhushan.\nField: Given for distinguish service</string>
    <string name="field2">\n<u>Arts and Literature Awards of India</u></string>
    <string name="jnanpith">For Indian authors and writers.\nField: Given for outstanding performance in the field of literature.</string>
    <string name="sahitya">For Indian authors and writers.\nField: Given for outstanding writing of books in Indian Language.</string>
    <string name="field3">\n<u>Military Awards of India</u></string>
    <string name="vir">It is the highest military award of India.\nField: Given for showing great courage at wartime.</string>
    <string name="chakra">It is the highest peacetime military award of Inida.\nField: Given for showing great courage during peacetime.</string>
    <string name="field4">\n<u>Games and Sports Awards of India</u></string>
    <string name="rajiv">Its if the highest sporting award of India.\nField: Given for outstanding international performance in a
        sport for a consecutive 4 years.</string>
</resources>